--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <li><a href="/">HOME</a></li>
                         <li><a href="/pages/historia.html">HISTORIA</a></li>
                         <li><a href="/pages/about-us.html">A CERCA DE NOSOTROS</a></li>
-                        <li><a href="/pages/formpage.html">CONTACTO</a></li>
+                        <li><a href="/pages/contact.html">CONTACTO</a></li>
                         <li><a href="/pages/location.html">UBICACIÓN</a></li>
 
                     </ul>
